src/objects/RET_Score__c.object
<CustomObject>
    <description>The RET Score is associated directly to an opportunity and assists in calculating the bid/no bid options for a particular competitive opportunity.</description>
    <fields>
        <fullName>Ability_to_Meet_Min_Required_References__c</fullName>
        <label>Ability to Meet Min Required References</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agencies_Being_Served__c</fullName>
        <formula>Opportunity__r.Agencies_being_served__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Agencies Being Served is pulling from information on the associated opportunity</inlineHelpText>
        <label>Agencies Being Served</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Manager__c</fullName>
        <description>Inserts the approval manager for the creating user of the RET Score</description>
        <formula>CreatedBy.Manager.FirstName &amp; &quot; &quot; &amp;  CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_No_Bid_RET_Decision_Date__c</fullName>
        <label>Bid/No Bid (RET) Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_No_Bid_Recommendation__c</fullName>
        <inlineHelpText>Please review the Bid or No Bid recommendation with your sales director prior to submission.</inlineHelpText>
        <label>Bid/No Bid Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_Parent_Total_Sworn_Officers__c</fullName>
        <formula>Opportunity__r.Account.CAD_Parent_Total_Sworn_Officers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAD Parent Total Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMPLETE_SEND_TO_MANAGER__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to complete the current RET Score and send the information to your Manager for approval</inlineHelpText>
        <label>COMPLETE &amp; SEND TO MANAGER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Requirements_included_in_RFP__c</fullName>
        <label>Competitor Requirements included in RFP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <label>Consultant Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DeltaWRX</fullName>
                </value>
                <value>
                    <fullName>Kimball</fullName>
                </value>
                <value>
                    <fullName>Mission Critical Partners</fullName>
                </value>
                <value>
                    <fullName>RCC</fullName>
                </value>
                <value>
                    <fullName>Winbourne</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_know_how_much_is_budgeted__c</fullName>
        <formula>Opportunity__r.Do_we_know_how_much_is_budgeted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Do we know how much is budgeted? is pulling from information on the associated opportunity</inlineHelpText>
        <label>Do we know how much is budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_we_meet_mandatory_RFP_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do we meet mandatory RFP Requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_we_engaged_the_committee__c</fullName>
        <formula>Opportunity__r.Have_we_engaged_the_committee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Have we engaged the committee? is pulling from information on the associated opportunity</inlineHelpText>
        <label>Have we engaged the committee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_many_on_site_meetings_have_we_had__c</fullName>
        <label>How many on-site meetings have we had?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identify_Committee_Members__c</fullName>
        <formula>Opportunity__r.Identify_Committee_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify Committee Members is pulling from information on the associated opportunity</inlineHelpText>
        <label>Identify Committee Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_No_Bid_Primary_Reason__c</fullName>
        <label>If No Bid - Primary Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Competitive Spec</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Compliancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_compliancy_with_functional_spec__c</fullName>
        <label>Level of compliancy with functional spec</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;90%</fullName>
                </value>
                <value>
                    <fullName>80%-90%</fullName>
                </value>
                <value>
                    <fullName>Less than 80%</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MANAGER_APPROVED__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Manager approval is required to send email to the team.</inlineHelpText>
        <label>MANAGER APPROVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Approved_Date_Time__c</fullName>
        <label>RET Approved By:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Bid_Explanation__c</fullName>
        <label>No Bid Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Officers_Band__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Number_of_Sworn_Officers_Band__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Sworn Officers Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sworn_Officers__c</fullName>
        <formula>Opportunity__r.Account.Number_of_Sworn_Personnel_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RET_Score</relationshipLabel>
        <relationshipName>RET_Score</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performed_On_Site_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed On-Site Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_On_Site_Discovery__c</fullName>
        <formula>Opportunity__r.Performed_On_Site_Discovery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Performed On-Site Discovery is pulling from information on the associated opportunity</inlineHelpText>
        <label>Performed On-Site Discovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Total__c</fullName>
        <formula>Opportunity__r.Budget_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Budget Total is pulling from information on the associated opportunity</inlineHelpText>
        <label>Project Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform RFQ</fullName>
                </value>
                <value>
                    <fullName>Inform RFI</fullName>
                </value>
                <value>
                    <fullName>Inform RFP</fullName>
                </value>
                <value>
                    <fullName>Zuercher RFQ</fullName>
                </value>
                <value>
                    <fullName>Zuercher RFI</fullName>
                </value>
                <value>
                    <fullName>Zuercher RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty_of_Local_References__c</fullName>
        <formula>Opportunity__r.Qty_of_Local_References__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Qty of Local References is pulling from information on the associated opportunity</inlineHelpText>
        <label>Qty of Local References</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_of_Negative_Local_References__c</fullName>
        <formula>Opportunity__r.Qty_of_Negative_Local_References__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Qty of Negative Local References is pulling from information on the associated opportunity</inlineHelpText>
        <label>Qty of Negative Local References</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RET_Score__c</fullName>
        <formula>Case(  Opportunity__r.Account.Service_Population_Tier__c , &quot;Tier 3&quot;,0,&quot;Tier 2L&quot;,7,&quot;Tier 2H&quot;,10.5,&quot;Tier 1&quot;,17.5,0) +
IF(AND(includes(Opportunity__r.Agency_Types_Being_Served__c    ,&quot;Law&quot;),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Fire&quot;)),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;))),4.5,0) +
IF(AND(includes( Opportunity__r.Agency_Types_Being_Served__c ,&quot;Fire&quot;),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Law&quot;)),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;))),7.5,0) +
IF(AND(includes( Opportunity__r.Agency_Types_Being_Served__c ,&quot;EMS&quot;),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Fire&quot;)),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Law&quot;))),3.0,0) +
IF(AND(includes( Opportunity__r.Agency_Types_Being_Served__c ,&quot;Law&quot;),(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Fire&quot;)),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;))),6.0,0) +
IF(AND(includes(Opportunity__r.Agency_Types_Being_Served__c ,&quot;Fire&quot;),(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;)),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Law&quot;))),6.0,0) +
IF(AND(includes(Opportunity__r.Agency_Types_Being_Served__c ,&quot;Law&quot;),(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Fire&quot;)),(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;))),6.0,0) +
IF(AND(includes(Opportunity__r.Agency_Types_Being_Served__c ,&quot;Law&quot;),NOT(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;Fire&quot;)),(includes(Opportunity__r.Agency_Types_Being_Served__c,&quot;EMS&quot;))),5.25,0) +
/*If( Mandatory_State_Requirements__c = false,-6,6) +*/
Case( Competitor_Requirements_included_in_RFP__c,&quot;Yes&quot;,0,&quot;N/A&quot;,4,&quot;No&quot;,8,0) +

CASE( Level_of_compliancy_with_functional_spec__c ,&quot;Unknown&quot;,-1.2,&quot;less than 80%&quot;,0,&quot;80%-90%&quot;,3.6,&quot;&gt;90%&quot;,6,0) +
If(  Opportunity__r.Do_we_know_how_much_is_budgeted__c  = false,0,1.5) +
/*If( ((  Opportunity__r.Budget_Total__c   /  Opportunity__r.Amount )*100 )&lt;60,-37.5,0) +*/
If( AND(((Opportunity__r.Budget_Total__c  / Opportunity__r.Amount)*100 )&lt;60,NOT(Opportunity__r.Budget_Total__c  = Opportunity__r.Amount)),-37.5,0) +
If( (Opportunity__r.Budget_Total__c  = Opportunity__r.Amount),3.75,7.5) +
/*If( ((Opportunity__r.Budget_Total__c  / Opportunity__r.Amount)*100 )&gt;60,7.5,0) +*/
Case( Opportunity__r.Source_of_budget_information__c , &quot;Coach&quot;,3,&quot;Published&quot;,6,0) +
Case( Consultant_Name__c , &quot;RCC&quot;,0.75,&quot;DeltaWRX&quot;,1.5,0) +
If( How_many_on_site_meetings_have_we_had__c &lt; 3,0,0) +
If( and(How_many_on_site_meetings_have_we_had__c &gt;= 3,How_many_on_site_meetings_have_we_had__c &lt; 6),3,0) +
If( How_many_on_site_meetings_have_we_had__c &gt;= 6,6,0) +
if(  Opportunity__r.Performed_On_Site_Discovery__c  = true,7.5,0) +
if( Performed_On_Site_Demo__c = true,7.5,0) +
if( Opportunity__r.Identify_Committee_Members__c = true,3,0) +
If( Opportunity__r.Have_we_engaged_the_committee__c = true,3,0)+
case(  Opportunity__r.Relationship_Quality_w_the_Key_contact__c  ,&quot;Seen as Partner/Trusted Advisor&quot;,1.5,&quot;Seen as Preferred Supplier&quot;,1.5,&quot;Seen as Viable Option&quot;,1.5,&quot;No Relationship&quot;,0,&quot;Not in Good Standing&quot;,-1.5,0)+
If( AND(Opportunity__r.Qty_of_Local_References__c &gt;=1,Opportunity__r.Qty_of_Local_References__c &lt;=3),1,0)+
If( OR(Opportunity__r.Qty_of_Local_References__c =4,Opportunity__r.Qty_of_Local_References__c =5),2,0) +
If( Opportunity__r.Qty_of_Local_References__c &gt;=6,3,0) +
If( Opportunity__r.Qty_of_Negative_Local_References__c = 0,2,0) +
Case( Ability_to_Meet_Min_Required_References__c,&quot;Yes&quot;,5,0)</formula>
        <label>RET Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Quality_w_the_Key_contact__c</fullName>
        <formula>TEXT( Opportunity__r.Account.Relationship_w_Decision_Maker_Sponsor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relationship Quality w/the Key contact? is pulling from information on the associated opportunity</inlineHelpText>
        <label>Relationship Quality w/the Key contact?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Population_Tier__c</fullName>
        <description>Pulls &quot;Service Population Tier&quot; from the Account page.</description>
        <formula>TEXT(Opportunity__r.Account.Service_Population_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service Population Tier is pulling from information on the associated opportunity&apos;s Account</inlineHelpText>
        <label>Service Population Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_budget_information__c</fullName>
        <formula>TEXT(Opportunity__r.Source_of_budget_information__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source of budget information is pulling from information on the associated opportunity</inlineHelpText>
        <label>Source of budget information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RET Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>Bid_No_Bid_Recommendation__c</columns>
        <columns>RET_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Bid_RETs</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>RET_Score__c</columns>
        <columns>Bid_No_Bid_Recommendation__c</columns>
        <columns>MANAGER_APPROVED__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_No_Bid_Recommendation__c</field>
            <operation>equals</operation>
            <value>Bid</value>
        </filters>
        <label>All - Bid RETs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_No_Bid_RETs</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>RET_Score__c</columns>
        <columns>Bid_No_Bid_Recommendation__c</columns>
        <columns>MANAGER_APPROVED__c</columns>
        <columns>If_No_Bid_Primary_Reason__c</columns>
        <columns>No_Bid_Explanation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_No_Bid_Recommendation__c</field>
            <operation>equals</operation>
            <value>No Bid</value>
        </filters>
        <label>All - No Bid RETs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RET-{00000000}</displayFormat>
        <label>RET Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RET Score</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>If_No_Bid_Require_the_No_Bid_Explanatio</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISPICKVAL(Bid_No_Bid_Recommendation__c, &apos;No Bid&apos;)),
(ISBLANK( No_Bid_Explanation__c))
)</errorConditionFormula>
        <errorDisplayField>No_Bid_Explanation__c</errorDisplayField>
        <errorMessage>Please list the explanation why we are not bidding</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_list_primary_reason_for_no_bid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISPICKVAL(Bid_No_Bid_Recommendation__c, &apos;No Bid&apos;)),
(ISPICKVAL( If_No_Bid_Primary_Reason__c, &apos;&apos;))
)</errorConditionFormula>
        <errorDisplayField>If_No_Bid_Primary_Reason__c</errorDisplayField>
        <errorMessage>Please choose the primary reason we are not bidding</errorMessage>
    </validationRules>
</CustomObject>